# Mandelbrot

./: CMakeLists.txt  README.md  glad.c  glad.h  julia_shader.glsl  main.cpp  mandelbrot.cpp  mandelbrot_shader.glsl  stb_image.cpp  tags
mandelbrot-simple/: julia.c  mandelbrot.c  obfusc.c
